fix,feat: Fix export error. Add table view for metadata keys.
TODO: Improve the table view
Signed-off-by: Jakub Šmrha <jsmahy@civ.zcu.cz>