@@ -28,6 +28,7 @@ application {
     mainClass = 'cz.zcu.jsmahy.datamining.Main'
     applicationDefaultJvmArgs = ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
                                  "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+                                 "--add-exports", "javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
                                  "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
                                  "--add-exports", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
                                  "--add-exports", "javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
@@ -99,5 +100,6 @@ test {
     systemProperties['prism.text'] = 't2k'
     jvmArgs = ["--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
                "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+               "--add-exports", "javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
                "--add-exports", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",]
 }
